--- a/dtv.html
+++ b/dtv.html
@@ -66,7 +66,7 @@ var videoContainer = document.getElementById('videoContainer'),
         document.createElement('video'),
         document.createElement('video')
     ],
-    vidSourcesMaster = doors_cinema.concat(doors_cinema4, doors_tpfwwm, doors_txfftf, doors_txfiwtb, doors_cinema2);
+    vidSourcesMaster = doors_EI.concat(doors_kolchak, doors_mlms01, doors_mlms02, doors_theprisoner, doors_tps01, doors_tps02, doors_tps03, doors_txfs01, doors_txfs02, doors_txfs03, doors_txfs04, doors_txfs05, doors_txfs06, doors_txfs07, doors_txfs08, doors_txfs09);
     vidSources = vidSourcesMaster;
     //random starting point
     nextActiveVideo = Math.floor((Math.random() * vidSources.length));
@@ -112,13 +112,13 @@ videoContainer.appendChild(videoObjects[1]);
 		else if (event.keyCode == 80 && !videoObjects[0].style.display && videoObjects[1].style.display == 'none' && document.activeElement.id !== 'filter') {
 		    videoObjects[0].play();
 	    }
-	    else if (event.keyCode == 70 && videoObjects[0].style.display == 'block') {
+	    else if (event.keyCode == 70 && videoObjects[0].style.display == 'block' && document.activeElement.id !== 'filter') {
 		    videoObjects[0].requestFullscreen();
 		    videoObjects[1].oncanplaythrough = function() {
 			videoObjects[1].requestFullscreen();
 		    }
   	    }
-	    else if (event.keyCode == 70 && videoObjects[1].style.display == 'block') {
+	    else if (event.keyCode == 70 && videoObjects[1].style.display == 'block' && document.activeElement.id !== 'filter') {
 		    videoObjects[1].requestFullscreen();
 		    videoObjects[0].oncanplaythrough = function() {
 			videoObjects[0].requestFullscreen();
@@ -215,7 +215,7 @@ const btn= document.getElementById("btn");
 
 btn.addEventListener('click', function(){
   var name = document.getElementById("filter").value;
-	name = name.split(/[\s ,]+/);
+	name = name.split(/[ ,]+/);
 	if (name.length == 1) {
 		vidSources = vidSourcesMaster.filter(element => element.split('/').pop(-1).includes(name[0]));
 	}
